--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "graphql-tag": "^2.9.2",
     "native-base": "^2.7.2",
     "react": "16.3.1",
-    "react-apollo": "^2.1.11",
+    "react-apollo": "2.1.0-beta.3",
     "react-native": "~0.55.2"
   }
 }
