--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "native-base": "^2.7.2",
+    "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-apollo": "2.1.0-beta.3",
     "react-native": "~0.55.2"
