--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-apollo": "2.1.0-beta.3",
-    "react-native": "~0.55.2"
+    "react-native": "~0.55.2",
+    "react-native-datepicker": "^1.7.2"
   }
 }
