--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo": "^27.0.1",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
+    "lodash": "^4.17.10",
     "native-base": "^2.7.2",
     "prop-types": "^15.6.2",
     "react": "16.3.1",
